--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,22 @@
     <version>4.12.0</version>
 </dependency>
 </dependencies>
+<profiles>
+<profile>
+<id>smokeid </id>
+<build><plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin> 
+</plugins>
+</build>
+</profile>
+</profiles>
 </project>
